[package]
name = "zksnark"
version = "0.1.0"
authors = ["Maciej Zielinski <maciej@casperlabs.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
doctest = false
test = false

[dependencies]
contract = { path = "../../../contract", package = "casperlabs-contract" }
types = { path = "../../../types", package = "casperlabs-types" }
bn = { git="https://github.com/paritytech/bn", default-features = false }
